plugins {
    id 'com.android.application'
}

android {

    namespace "mobi.meow.android.gootool"
    buildToolsVersion '33.0.0'
    compileSdk 33

    defaultConfig {
        applicationId "mobi.meow.android.gootool"
        minSdk 26
        //noinspection ExpiredTargetSdkVersion
        targetSdk 27
        versionCode 11000
        versionName "1.1.0"
        vectorDrawables.useSupportLibrary = true
    }

    applicationVariants.all { variant ->
        variant.outputs.all { output ->
            outputFileName = "GooTool-${defaultConfig.versionName}-${defaultConfig.versionCode}-${applicationId}-${buildType.name}.apk"
        }
    }

    lintOptions {
        checkReleaseBuilds false
        abortOnError false
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
        }
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_16
        targetCompatibility JavaVersion.VERSION_16
    }
}

dependencies {
    implementation fileTree(dir: 'libs', include: ['*.jar'])
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'com.google.android.material:material:1.9.0'
}
